<resources>
    <string name="app_name">Cal</string>
    <string name="CE">CE</string>
    <string name="leftBracket">(</string>
    <string name="RightBracket">)</string>
    <string name="Slash">/</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="star">*</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="BackSpace">C</string>
    <string name="description"> </string>

</resources>
